--- a/templates/name-game.html
+++ b/templates/name-game.html
@@ -272,14 +272,8 @@
                 setState(prevState=>{
                     if (!prevState.myTurn) { 
                         console.error("bad bad bad",)
-                        var callerName;
                         try { throw new Error(); }
-                        catch (e) { 
-                            var re = /(\w+)@|at (\w+) \(/g, st = e.stack, m;
-                            re.exec(st), m = re.exec(st);
-                            callerName = m[1] || m[2];
-                        }
-                        console.log(callerName);
+                        catch (e) { console.log(e.stack); }
                     }
                     socket.current.emit("emit_next_name","{{game_id}}",state.userID)
                     
