--- a/templates/name-game.html
+++ b/templates/name-game.html
@@ -263,17 +263,18 @@
                     ...prevState,
                     startButtonEnabled: false,
                 }))
-                audio1.current.addEventListener('ended', startAfterAudio)
+                audio1.current.addEventListener('ended', startAfterAudio, {once: true})
                 audio1.current.play()
             }
 
             function startAfterAudio(){
-                audio1.current.removeEventListener('ended', startAfterAudio)
+                audio1.current.removeEventListener('ended', startAfterAudio, {once: true})
                 setState(prevState=>{
                     if (!prevState.myTurn) { 
                         console.error("bad bad bad",)
                         try { throw new Error(); }
                         catch (e) { console.log(e.stack); }
+                        return prevState
                     }
                     socket.current.emit("emit_next_name","{{game_id}}",state.userID)
                     
