--- a/templates/name-game.html
+++ b/templates/name-game.html
@@ -62,7 +62,7 @@
                 
                 const newSocket = io.connect(window.origin, {query:"game_id={{game_id}}"})
 
-                newSocket.onAny((eventName, ...args) => {console.log(eventName, args)})
+                //newSocket.onAny((eventName, ...args) => {console.log(eventName, args)})
 
                 newSocket.on('emit_teams',function(msg) { 
                     teams = msg 
@@ -123,10 +123,6 @@
                 }) 
 
                 newSocket.on('emit_next_name',function(name_data) {
-                    //
-                    var date = new Date()
-                    console.log(date.getSeconds()+date.getMilliseconds()*0.001, "emit_next_name")
-                    //
                     if (name_data == "no more names"){
                         concede(true)
                     } else {
@@ -270,20 +266,12 @@
             function startAfterAudio(){
                 audio1.current.removeEventListener('ended', startAfterAudio, {once: true})
                 setState(prevState=>{
-                    if (!prevState.myTurn) { 
-                        console.error("bad bad bad",)
-                        alert("bad bad bad")
-                        try { throw new Error(); }
-                        catch (e) { console.log(e.stack); }
+                    if (!prevState.myTurn) {
+                        console.error("this should not be happening")
+                        console.log("audio1.current's event listener:", getEventListeners(audio1.current))
                         return prevState
                     }
                     socket.current.emit("emit_next_name","{{game_id}}",state.userID)
-                    
-                    //
-                    var date = new Date()
-                    console.log("startAfterAudio() emit_next_name",date.getSeconds()+date.getMilliseconds()*0.001, "prevState.myTurn:",prevState.myTurn)
-                    //
-                
                     socket.current.emit("start_timer","{{game_id}}",state.userID)
                     startCountdown()
                     return {
@@ -299,7 +287,6 @@
                 document.getElementById("done_button").blur()
                 score_answer(nameRef.current.name_id, 1)
                 socket.current.emit("emit_next_name","{{game_id}}",state.userID)
-                console.log("done() emit_next_name")
                 setState(prevState=>({
                     ...prevState,
                     doneButtonEnabled: false,
