--- a/templates/name-game.html
+++ b/templates/name-game.html
@@ -263,13 +263,14 @@
                 audio1.current.play()
             }
 
-            function startAfterAudio(){
+            function startAfterAudio(event){
                 audio1.current.removeEventListener('ended', startAfterAudio, {once: true})
                 setState(prevState=>{
                     if (!prevState.myTurn) {
                         console.error("this should not be happening")
-                        setTimeout(function() { alert("name appeared when it'd not your turn") }, 1)
-                        console.log("audio1.current's event listener:", getEventListeners(audio1.current))
+                        setTimeout(function() { alert("name appeared when it's not your turn") }, 1)
+                        console.log("event")
+                        //console.log("audio1.current's event listener:", getEventListeners(audio1.current))
                         return prevState
                     }
                     socket.current.emit("emit_next_name","{{game_id}}",state.userID)
