--- a/templates/name-game.html
+++ b/templates/name-game.html
@@ -269,7 +269,7 @@
                     if (!prevState.myTurn) {
                         console.error("this should not be happening")
                         setTimeout(function() { alert("name appeared when it's not your turn") }, 1)
-                        console.log("event")
+                        console.log(event)
                         //console.log("audio1.current's event listener:", getEventListeners(audio1.current))
                         return prevState
                     }
