--- a/templates/name-game.html
+++ b/templates/name-game.html
@@ -266,16 +266,17 @@
             const startAfterAudio = React.useCallback(()=>{
                 audio1.current.removeEventListener('ended', startAfterAudio, true)
                 audio1.current = null
+                socket.current.emit("emit_next_name","{{game_id}}",state.userID)
+                socket.current.emit("start_timer","{{game_id}}",state.userID)
+                startCountdown()
                 setState(prevState=>{
-                    if (!prevState.myTurn) {
-                        console.error("this should not be happening")
-                        setTimeout(function() { alert("name appeared when it's not your turn") }, 1)
-                        //console.log("audio1.current's event listener:", getEventListeners(audio1.current))
-                        return prevState
-                    }
-                    socket.current.emit("emit_next_name","{{game_id}}",state.userID)
-                    socket.current.emit("start_timer","{{game_id}}",state.userID)
-                    startCountdown()
+                    // if (!prevState.myTurn) {
+                    //     console.error("this should not be happening")
+                    //     setTimeout(function() { alert("name appeared when it's not your turn") }, 1)
+                    //     //console.log("audio1.current's event listener:", getEventListeners(audio1.current))
+                    //     return prevState
+                    // }
+                    
                     return {
                         ...prevState,
                         turnStarted: true,
