--- a/templates/name-game.html
+++ b/templates/name-game.html
@@ -223,6 +223,7 @@
                 setState(prevState=>({
                     ...prevState,
                     whosUpVisible: false,
+                    startButtonEnabled: true,
                 }))
             }
             React.useEffect(()=>{
