--- a/templates/lobby.html
+++ b/templates/lobby.html
@@ -60,7 +60,7 @@
                 }) 
 
                 newSocket.on('deletion_kick',function(msg) {
-                    alert(`You we're kicked by ${msg}`)
+                    alert(msg)
                     location.href='/';
                 }) 
 
