--- a/templates/name-game.html
+++ b/templates/name-game.html
@@ -271,7 +271,6 @@
 
             const startAfterAudio = React.useCallback(()=>{
                 audio1.current.removeEventListener('ended', startAfterAudio, true)
-                audio1.current = null
                 socket.current.emit("emit_next_name","{{game_id}}",state.userID)
                 socket.current.emit("start_timer","{{game_id}}",state.userID)
                 startCountdown()
@@ -282,7 +281,8 @@
                     //     //console.log("audio1.current's event listener:", getEventListeners(audio1.current))
                     //     return prevState
                     // }
-                    
+                    audio1.current = prevState.audio1
+
                     return {
                         ...prevState,
                         turnStarted: true,
