--- a/templates/name-game.html
+++ b/templates/name-game.html
@@ -93,7 +93,7 @@
                         var my_teams_turn = current_team_id === prevState.teamID
                         var new_phase = getPhaseNumber(current_player, my_teams_turn, my_turn)
                         teammates = JSON.parse(JSON.stringify(prevState.teammembers[current_team_id])).filter(x=>x!==current_turn_user_id)
-                        if (my_turn && prevState.myTurn){ your_turn() }
+                        if (my_turn && prevState.myTurn){ your_turn() } // fixes bug where single player gets stuck in limbo because audio is null and doesnt get refreshed
                         return {
                             ...prevState,
                             currentPlayerID: current_turn_user_id,
