--- a/templates/lobby.html
+++ b/templates/lobby.html
@@ -142,6 +142,9 @@
                                     }))
                                     username_change(e.target.value)
                                 }}/>
+                                <button class="button2 tick-button" id="button{{name_number}}" onclick="get_random_name(this)">
+                                    ✓
+                                </button>
                             </div>
                         </h1>
                     </div>
@@ -253,6 +256,9 @@
                                         teams: prevTeams,
                                     })})
                                 }}/>
+                                <button class="button2 tick-button" id="button{{name_number}}" onclick="get_random_name(this)">
+                                    ✓
+                                </button>
                             </div>
                         </h1>
                     </div>
