--- a/static/style.css
+++ b/static/style.css
@@ -30,6 +30,9 @@ body{
     flex-direction: row;
     justify-content: space-evenly;
 }
+.grow{
+    flex-grow: 1;
+}
 .flex-h-left{
     display: flex;
     flex-direction: row;
@@ -194,8 +197,10 @@ output{
     color: white;
 }
 .vw40{width:40%}
+.vw50{width:50%}
 .vw86{width:86%}
 .vh40{width:40%}
+.vh100{height:100%}
 p{margin:0}
 td p, td strong, .game-details p{
     font-size: 14px;
@@ -229,10 +234,12 @@ table, th, td, tr {
 .vmar{margin:0.8em 0em 0.8em 0em}
 .vmar-tiny{margin:0.2em 0em 0.2em 0em}
 .mt1{margin-top: 0.2em}
-.mt--1{margin-top: 0.2em !important;
-    margin-left: -3em !important;}
+.mt--1{margin-top: 0.2em !important;}
+.ml--3{margin-left: -3em !important;}
 .vmar2{margin:2em 0em 2em 0em}
 .pad-lr{padding:0em 0.4em 0em 0.4em}
+.h-auto{height: auto}
+.p-0{padding: 0}
 .slight-v-gradient{
     /* backdrop filter that is a gradient of brightness */
     background: linear-gradient(rgba(255, 255, 255, 0.07), rgba(255, 255, 255, 0.1) 50%, rgba(255, 255, 255, 0.2) 100%);
@@ -255,6 +262,15 @@ table, th, td, tr {
 .white{color:rgb(255, 255, 255)}
 .team-players-table{display: block;}
 .team-players-table td{display: inline-block;}
+table.players-team {
+	display: table;
+}
+table.players-team tr {
+	display: table-cell;
+}
+table.players-team tr td {
+	display: block;
+}
 .dice{
     height: 2.1em; 
     width: 2.1em; 
@@ -395,16 +411,18 @@ input:focus + .slider { box-shadow: 0 0 1px linear-gradient(to bottom right, #e0
 input:checked + .slider:before { -webkit-transform: translateX(19px); -ms-transform: translateX(19px); transform: translateX(19px); }
 
 /*toggle switch smaller*/
-.switch2 { margin: 0em 0.6em 2px 4px; position: relative; display: inline-block; width: 36px; height: 20px; }
+.switch2 { margin-left: 8px; position: relative; display: inline-block; width: 36px; height: 20px; }
 .switch2 input { opacity: 0; width: 0; height: 0; }
 .slider2 { position: absolute; cursor: pointer; top: 0; left: 0; right: 0; bottom: 0; background-color: rgba(72, 72, 72, 0.676); -webkit-transition: .2s; transition: .2s; border-radius: 2px; 
     box-shadow: inset 0 3px 10px rgb(0 0 0 / 0.3);}
-.slider2:before { position: absolute; content: ""; height: 14px; width: 14px; left: 4px; bottom: 4px; background-color: white; -webkit-transition: .2s; transition: .2s; border-radius: 2px;}
+.slider2:before { position: absolute; content: ""; height: 14px; width: 14px; left: 3px; bottom: 3px; background-color: white; -webkit-transition: .2s; transition: .2s; border-radius: 2px;}
 input:checked + .slider2 { background-color: rgba(0, 0, 0, 0.2) }
 input:focus + .slider2 { box-shadow: 0 0 1px linear-gradient(to bottom right, #e0e0e0, #F7F7F7); }
-input:checked + .slider2:before { -webkit-transform: translateX(15px); -ms-transform: translateX(15px); transform: translateX(15px); }
+input:checked + .slider2:before { -webkit-transform: translateX(16px); -ms-transform: translateX(16px); transform: translateX(16px); }
 
-/* background-image: linear-gradient(30deg, rgb(214, 174, 196) 12%, transparent 12.5%, transparent 87%, rgb(214, 174, 196) 87.5%, rgb(214, 174, 196)),
+/*.switch-heading{margin: 4px 8px auto 8px ;}
+
+ background-image: linear-gradient(30deg, rgb(214, 174, 196) 12%, transparent 12.5%, transparent 87%, rgb(214, 174, 196) 87.5%, rgb(214, 174, 196)),
 linear-gradient(150deg, rgb(214, 174, 196) 12%, transparent 12.5%, transparent 87%, rgb(214, 174, 196) 87.5%, rgb(214, 174, 196)),
 linear-gradient(30deg, rgb(214, 174, 196) 12%, transparent 12.5%, transparent 87%, rgb(214, 174, 196) 87.5%, rgb(214, 174, 196)),
 linear-gradient(150deg, rgb(214, 174, 196) 12%, transparent 12.5%, transparent 87%, rgb(214, 174, 196) 87.5%, rgb(214, 174, 196)),
